# neuronc

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .mailmap  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TASK.md  dev-neuron.bat  migrate_branding.py  migrate_content.ps1  migrate_content_v2.ps1  run.bat
Docs/: README.md  (+1 more)
runtime/: CMakeLists.txt  README.md
runtime/cuda_kernels/: elementwise.cu  fma.cu  generate_cuda_kernels.ps1  matmul_dense.cu  matmul_packed.cu  tensor_ops.ptx
runtime/include/: neuron_gpu.h  neuron_graphics.h  neuron_nn.h  neuron_platform.h  neuron_runtime.h  neuron_runtime_export.h  neuron_tensor.h
runtime/installer/: Ed25519.h  InstallerMain.cpp  InstallerUI.h  InstallerUI_Win32.cpp  UninstallerMain.cpp  UpdaterMain.cpp  UpdaterUI.h  UpdaterUI_Win32.cpp
runtime/minimal/: README.md  sources.manifest
runtime/minimal/windows_x64/: minimal-link.rsp
runtime/shaders/: binary_chain.comp  binary_chain_then_fma.comp  binary_then_fma.comp  elementwise_binary.comp  fma.comp  generate_spirv.ps1  matmul_dense.comp  matmul_packed.comp
runtime/src/: cuda_kernels.h  gpu.c  gpu_cuda.c  gpu_internal.h  io.c  modulecpp_runtime.cpp  nn.c  runtime.c  tensor.c  vulkan_common.h  vulkan_common_api.c  vulkan_common_device.c  vulkan_common_internal.h  vulkan_common_loader.c  vulkan_common_state.c  vulkan_shaders.h
runtime/src/gpu_vulkan/: gpu_vulkan_core.c  gpu_vulkan_dispatch.c  gpu_vulkan_dispatch_internal.h  gpu_vulkan_engine.c  gpu_vulkan_engine_internal.h  gpu_vulkan_init.c  gpu_vulkan_init_internal.h  gpu_vulkan_internal.h  gpu_vulkan_interop.c  gpu_vulkan_interop_internal.h  gpu_vulkan_public_api.c  gpu_vulkan_scope.c  gpu_vulkan_scope_internal.h
runtime/src/graphics/: README.md  graphics_assets.c  graphics_assets_internal.h  graphics_core_assets_api.c  graphics_core_internal.h  graphics_core_state.c  graphics_core_window_canvas_api.c  graphics_types_internal.h  graphics_window_canvas.c  graphics_window_canvas_internal.h
runtime/src/graphics/assets/: graphics_asset_internal.h  graphics_asset_obj_parser.c  graphics_asset_png_wic.c
runtime/src/graphics/backend/: graphics_backend_internal.h
runtime/src/graphics/platform/: graphics_platform_internal.h  graphics_platform_win32.c
runtime/src/graphics/scene2d/: graphics_scene2d_internal.h  graphics_scene2d_renderer.c  graphics_scene2d_scene.c
runtime/src/platform/: README.md  gpu_webgpu.c  platform_manager.c  platform_manager_internal.h
runtime/src/platform/apple/: platform_apple_diagnostics.c  platform_apple_env.c  platform_apple_library.c  platform_apple_path.c  platform_apple_process.c  platform_apple_thread.c  platform_apple_time.c  platform_apple_window.c
runtime/src/platform/common/: platform_error.c
runtime/src/tensor/: README.md  tensor_config.c  tensor_config_internal.h  tensor_core.c  tensor_core_internal.h  tensor_math.c  tensor_math_internal.h  tensor_microkernel.c  tensor_microkernel_internal.h
src/cli/: CMakeLists.txt  CommandDispatcher.cpp  MinimalBuilder.cpp  ModuleCppManifest.cpp  ModuleCppSupport.cpp  ModuleResolver.cpp  PackageLock.cpp  PackageManager.cpp  ProductBuilder.cpp  ProductSettings.cpp  ProjectConfig.cpp  ProjectGenerator.cpp  README.md  ResourceCompiler.cpp  SettingsMacroContext.cpp  SettingsMacroEffective.cpp  SettingsMacroExpansion.cpp  SettingsMacroInternal.h  SettingsMacroParsing.cpp  SettingsMacroParsingCursor.cpp  SettingsMacroParsingValues.cpp  SettingsMacroProcessor.cpp  SettingsMacroRoots.cpp  WebBuildPipeline.cpp  WebDevServer.cpp  WebShaderTranspiler.cpp
src/cli/commands/: DebugCommands.cpp  PackageQueryCommands.cpp  ProjectCommands.cpp
src/cli/installer/: InstallerBuilder.cpp
src/cli/pipeline/: CompilePipeline.cpp
src/cli/repl/: ReplConsoleReader.cpp  ReplPipeline.cpp
src/codegen/: CMakeLists.txt  JITEngine.cpp  LLVMCodeGen.cpp  README.md
src/codegen/llvm/: LLVMObjectEmitter.cpp  LLVMRuntimeRegistry.cpp  LLVMTypeLowering.cpp
src/ncon/: Builder.cpp  Bytecode.cpp  CMakeLists.txt  Format.cpp  Inspect.cpp  Manifest.cpp  NativeModuleManager.cpp  NconCLI.cpp  NconMiniCLI.cpp  Program.cpp  README.md  Reader.cpp  Runner.cpp  RuntimeBridge.cpp  Sandbox.cpp  Sha256.cpp  VM.cpp  VMExecutorLifecycle.cpp  VMExecutorOps.cpp  VMExecutorPatch.cpp  VMExecutorTensor.cpp  VMExecutorValues.cpp  VMHotReload.cpp  VMInternal.h
src/nir/: CMakeLists.txt  NIR.cpp  NIRBuilder.cpp  Optimizer.cpp  OptimizerCleanup.cpp  OptimizerGpuScopeLifting.cpp  OptimizerInternal.h  OptimizerTensorFusion.cpp  OptimizerUtils.cpp  README.md
src/nir/core/: NIRBuilderBlockVisitor.cpp  NIRBuilderCore.cpp
src/nir/decls/: NIRBuilderDecls.cpp
src/nir/detail/: NIRBuilderShared.h
src/nir/lowering/: LowerCalls.cpp  LowerControlFlow.cpp  LowerExprOps.cpp  LowerExpressions.cpp  LowerGraphics.cpp  LowerLoopAndExceptions.cpp
src/nir/types/: NIRTypeResolver.cpp
src/parser/: AST.cpp  CMakeLists.txt  Parser.cpp  README.md
src/parser/core/: ParserCore.cpp
src/parser/declarations/: ParseDeclarations.cpp  ParseGraphicsDeclarations.cpp  ParseTopLevel.cpp  ParseTypeDeclarations.cpp
src/parser/expressions/: ParseExpressionSupport.cpp  ParseExpressions.cpp  ParsePrimaryExpressions.cpp
src/parser/statements/: ParseControlFlow.cpp  ParseGraphicsStatements.cpp  ParseStatements.cpp
src/sema/: AnalysisContext.cpp  AnalysisContext.h  AnalysisHelpers.cpp  AnalysisHelpers.h  AnalysisOptions.h  BindingAnalyzer.cpp  BindingAnalyzer.h  CMakeLists.txt  CallableBinder.cpp  CallableBinder.h  DeclarationAnalyzer.cpp  DeclarationAnalyzer.h  DiagnosticEmitter.cpp  DiagnosticEmitter.h  ExpressionAnalyzer.cpp  ExpressionAnalyzer.h  FlowAnalyzer.cpp  FlowAnalyzer.h  GraphicsAnalyzer.cpp  GraphicsAnalyzer.h  InputAnalyzer.cpp  InputAnalyzer.h  README.md  ReferenceTracker.cpp  ReferenceTracker.h  RuleValidator.cpp  RuleValidator.h  ScopeManager.cpp  ScopeManager.h  SemanticAnalyzer.cpp  SemanticDriver.cpp  SemanticDriver.h  StatementAnalyzer.cpp  StatementAnalyzer.h  SymbolTable.cpp  SymbolTable.h  TypeChecker.cpp  TypeChecker.h  TypeResolver.cpp  TypeResolver.h  (+1 more)
(+633 files in other folders)
